--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,7 +21,7 @@
                 android:id="@+id/menu0"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:elevation="0dp"
@@ -34,7 +34,7 @@
                 android:id="@+id/menu1"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:fontFamily="@font/rubikmedium"
@@ -46,7 +46,7 @@
                 android:id="@+id/menu2"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:fontFamily="@font/rubikmedium"
@@ -58,7 +58,7 @@
                 android:id="@+id/menu3"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:fontFamily="@font/rubikmedium"
@@ -70,11 +70,11 @@
                 android:id="@+id/menu4"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:fontFamily="@font/rubikmedium"
-                android:text="Food Recovery"
+                android:text="Notifications"
                 android:textColor="@color/calNourishAccent"
                 android:textSize="18sp" />
 
@@ -82,7 +82,7 @@
                 android:id="@+id/menu5"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="match_parent"
-                android:layout_height="60dp"
+                android:layout_height="80dp"
                 android:backgroundTint="#FFFFFF"
                 android:backgroundTintMode="add"
                 android:fontFamily="@font/rubikmedium"
