--- a/app/src/main/res/layout/activity_notification_list.xml
+++ b/app/src/main/res/layout/activity_notification_list.xml
@@ -36,6 +36,12 @@
                     android:drawableTint="@color/calNourishText"
                     android:paddingLeft="16dp" />
 
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
+
 
             </RelativeLayout>
 
