--- a/app/src/main/res/layout/card_activity.xml
+++ b/app/src/main/res/layout/card_activity.xml
@@ -15,12 +15,12 @@
         <!--Card Image-->
         <ImageView
             android:id="@+id/photo"
-            android:tint="#55000000"
-            android:maxHeight="80dp"
-            android:adjustViewBounds= "true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop" />
+            android:adjustViewBounds="true"
+            android:maxHeight="100dp"
+            android:scaleType="centerCrop"
+            android:tint="#55000000" />
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                     android:text="cardText"
                     android:textAlignment="viewStart"
                     android:textColor="@android:color/white"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </FrameLayout>
