--- a/app/src/main/res/layout/item_card_activity.xml
+++ b/app/src/main/res/layout/item_card_activity.xml
@@ -39,8 +39,9 @@
 
                 <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_gravity="start|top"
+                    android:gravity="center_vertical"
                     android:orientation="vertical">
 
                     <TextView
@@ -56,21 +57,6 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/notification_body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginBottom="2dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/rubikregular"
-                        android:text="cardText1"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishGray"
-                        android:textStyle="bold"
-                        android:visibility="invisible"
-                        tools:visibility="invisible" />
-
-                    <TextView
                         android:id="@+id/itemCount"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -83,6 +69,21 @@
                         android:textStyle="bold" />
 
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/notification_body"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/rubikregular"
+                    android:text="cardText1"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/calNourishGray"
+                    android:textStyle="bold"
+                    android:visibility="invisible"
+                    tools:visibility="invisible" />
 
             </LinearLayout>
 
