--- a/app/src/main/res/layout/notification_card_activity.xml
+++ b/app/src/main/res/layout/notification_card_activity.xml
@@ -25,50 +25,57 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/timestamp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="3 days ago"
+                    android:textAlignment="viewEnd" />
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="start|top"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/notification_title"
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="2dp"
-                        android:fontFamily="@font/rubikmedium"
-                        android:text="cardText"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishText"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
+                        android:layout_gravity="start|top"
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/notification_body"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
-                        android:layout_marginBottom="2dp"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/rubikregular"
-                        android:text="cardText1"
-                        android:textAlignment="viewStart"
-                        android:textColor="@color/calNourishGray"
-                        android:textStyle="bold" />
+                        <TextView
+                            android:id="@+id/notification_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="2dp"
+                            android:fontFamily="@font/rubikmedium"
+                            android:text="cardText"
+                            android:textAlignment="viewStart"
+                            android:textColor="@color/calNourishText"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/timestamp"
+                    android:id="@+id/notification_body"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="2dp"
                     android:layout_weight="1"
-                    android:text="3 days ago"
-                    android:textAlignment="viewEnd" />
-
+                    android:fontFamily="@font/rubikregular"
+                    android:text="cardText1"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/calNourishGray"
+                    android:textStyle="bold" />
             </LinearLayout>
 
         </FrameLayout>
