--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,23 +9,18 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimary">
 
-        <ImageView android:id="@+id/splashscreen"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
-            android:src="@drawable/bg"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center"/>
 
         <ImageView
             android:id="@+id/splashlogo"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="136dp"
             android:src="@drawable/app_logo" />
 
 
